# dacttylo

./: .gitignore  Cargo.toml  README.md  dacttylo.txt  errlog.txt  file.rs  log.txt  poem.txt  requirements.txt  tabfile.txt
docs/: dacttylo.txt  features.txt  notes.txt  requirements.txt
records/: 04e4623233  8dd7e112f3  ea8f163db3  f022d552d9
spec/: features.txt
src/: editor_state.rs  editor_view.rs  editorview.rs  highlight.rs  highlighter.rs  lib.rs  line_processor.rs  line_stylizer.rs  main.rs  text_coord.rs  text_view.rs  textview.rs  typeview.rs
src/app/: mod.rs  state.rs  widget.rs
src/cli/: base_opts.rs  mod.rs
src/editor/: mod.rs  rope_iter.rs
src/events/: app_event.rs  event_aggregator.rs  ghost.rs  mod.rs  term_io.rs  ticker.rs
src/game/: game.rs  mod.rs  online_game.rs
src/game_state/: board.rs
src/game_state/board/: style.rs
src/ghost/: mod.rs
src/highlighting/: highlighter.rs  mod.rs  noop.rs  syntect.rs
src/input/: record.rs
src/line/: mod.rs  processor.rs  stylizer.rs
src/modes/: mod.rs
src/modes/practice/: mod.rs
src/network/: errors.rs  event_loop.rs  message.rs  mod.rs  net_command.rs  net_event.rs  p2p_client.rs
src/record/: elapsed.rs  input.rs  manager.rs  mod.rs  recorder.rs
src/session/: client.rs  command.rs  data.rs  event.rs  mod.rs  session_handle.rs
src/stats/: mod.rs
src/utils/: helpers.rs  log.rs  mod.rs  reflow.rs  syntect.rs  time.rs  tui.rs  types.rs
src/widgets/: figtext.rs  mod.rs  wpm.rs
textfiles/: abc.txt  basic.txt  file.rs  gut.txt  lol.txt  poem.txt  poem2.txt  tabfile3.txt  text.txt  unicode.txt  vimtest.txt  wrap.txt
