[package]
name = "ttypebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
message-io = "0.14.2"
bincode = "1.2.1"
rand = "0.8.4"
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
syntect = "4.6.0"
once_cell = "1.8.0"
