[package]
name = "dacttylo"
version = "0.1.0"
edition = "2021"
default-run = "dacttylo"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
message-io = "0.14.2"
bincode = "1.2.1"
rand = "0.8.4"
crossterm = { version = "0.22.1", features = ["event-stream"] }
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
syntect = "4.6.0"
once_cell = "1.8.0"
itertools = "0.10.0"
unicode-width = "0.1.5"
unicode-segmentation = "1.7.1"
textwrap = "0.14.2"
chrono = "0.4.19"
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
futures = "0.3.19"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
async-stream = "0.3.2"
clap = { version = "3.0.0-rc.9", features = ["derive"] }
serde_with = { version = "1.11.0", features = ["chrono"] }
blake3 = "1.3.1"
thiserror = "1.0.30"
figlet-rs = "0.1.3"